syntax = "proto3";

message Lobby {
  LobbyId id = 1;
  Vacancy vacancy = 2;
}

message LobbyId {
  string name = 1;
}

message Vacancy {
  uint32 vacant_slots = 1;
}

message Player {
  PlayerId id = 1;
  Address address = 2;
}

message PlayerId {
  string uuid = 1;
  string nickname = 2;
}

message Address {
  fixed32 ipv4 = 1;
  uint32 port = 2;
}

message InitialGameState {
  map<string, PlayerState> players = 1;
  MapSettings mapSettings = 2;
}

message PlayerState {
  int64 health = 1;
  int64 money = 2;
}

message MapSettings {
  Path path = 1;
  Image background = 2;
}

message Path {
  repeated Point points = 1;
}

message Image {
  bytes image_data = 1;
  int32 height = 2;
  int32 width = 3;
  int64 frame = 4;
}

message Point {
  float x = 1;
  float y = 2;
}

enum Status {
  OK = 0;
  ERROR = 1;
}